# syltr

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  Syltr-Rust-GTK-para-devs-Java.html  Syltr.kdev4  build.rs  pyproject.toml
.kdev4/: Syltr.kdev4
cef-spike/: Cargo.toml
cef-spike/src/: input.rs  main.rs  osr.rs
data/: CMakeLists.txt  dev.syltr.Syltr.desktop  dev.syltr.Syltr.metainfo.xml  syltr.gresource.xml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  FROM_JAVA.md  ROADMAP.md
packaging/: PKGBUILD
po/: pt.po
resources/: resources.qrc
scripts/: build-cef-codecs.sh  cef-codec-check.js  install-app.sh  install-deps.sh
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Service.cpp  Service.h  ServiceManager.cpp  ServiceManager.h  ServiceWebView.cpp  ServiceWebView.h  TrayIcon.cpp  TrayIcon.h  catalog.rs  config.rs  engine.rs  icon.rs  imgproxy.rs  input.rs  main.cpp  main.rs  spellcheck.rs  syltrui.rc  window.rs
src/config/: mod.rs  service.rs  settings.rs
src/config/service/: tests.rs
src/engine/: bootstrap.rs  browser_slot.rs  client.rs  clipboard.rs  context_menu.rs  display.rs  download.rs  favicon.rs  lifespan.rs  mod.rs  navigation.rs  permission.rs  prefs.rs  render.rs  request.rs  request_context.rs  scripts.rs  session.rs  tests.rs
src/engine/navigation/: mod.rs  tests.rs
src/engine/unread/: mod.rs  tests.rs
src/engine/user_agent/: mod.rs  tests.rs
src/engine/webapp_scripts/: teams.rs
src/imgproxy/: fetch.rs  mod.rs
src/input/: mod.rs  translate.rs
src/window/: actions.rs  context_menu.rs  dialogs.rs  mod.rs  settings.rs  sidebar.rs  widgets.rs
src/window/sidebar/: tests.rs
syltr/: __init__.py  __main__.py  app.py  paths.py  profile_manager.py  service_manager.py  tray.py
syltr/qml/: Main.qml  ServiceView.qml  Sidebar.qml  qmldir
syltr/resources/: services.json
